@@ -65,6 +65,11 @@ sub make_tokens {
                 push @tokens, [$self->{_spacing_normal}, $uri];
                 $got_word = 1;
             }
+            # ssh:// (and foo+ssh://) URIs
+            elsif ($chunk =~ s{ ^ (?<uri> (?:\w+\+) ssh:// \S+ ) }{}xo) {
+                push @tokens, [$self->{_spacing_normal}, $+{uri}];
+                $got_word = 1;
+            }
             # Twitter names
             elsif ($chunk =~ s/ ^ (?<twat> $TWAT_NAME ) //xo) {
                 # Names on Twitter/Identi.ca can only match
